add second quote

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main class="container">
         <h1>Pull me some quotes</h1>
         <h2>This be the first quote</h2>
+        <h2>Second quote</h2>
     </main>
 
 </body>
